# feti-ng

./: .gitignore  LICENSE  README.md  config.tpl.toml  pyproject.toml  secrets.tpl.toml
bulma/: style.scss
misc/: logo.afpub  logo.afpub~lock~  open_graph.afpub  open_graph.afpub~lock~
misc/build-icons/: README.md  config.json
ng2/: config.go  deploy.go  file.go  go.mod  go.sum  main.go  project.go  schedule-file.go  schedule.go  watcher.go
ng2/prj/: info-de.md  info-en.md
ng2/static/css/: bootstrap.min.css.map
ng2/tpl/: index.tmpl.html
sass/: event.scss  genre-color.scss  style.scss
src/feti/: __main__.py  baserow.py  build.py  config.py  deploy.py  schedule.py
web/: index-bulma.html  index.html  schedule.json
web/assets/css/: bulma.min.css  icons.css  material-icons.css
web/assets/font/: MaterialIcons-Regular.eot
web/assets/js/: app.js
